# raspberry-pi-pico-projects

hello-pico/: .gitignore  CMakeLists.txt  README.md  main.c
